--- a/Details.html
+++ b/Details.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="aqua" align="center" >
 <h1 style="background-color:pink;color:red;text-align:center;text-decoration:underline">Personal Profile</h1></br></br>
-<img src="C:\Users\Admin\OneDrive\Desktop\veda image1.jpg" alt="image" height="150" width="150" style="border-style:solid;border-width:5px;border-color:orange" align="center" /></br></br>
+<img src="veda image1.jpg" alt="image" height="150" width="150" style="border-style:solid;border-width:5px;border-color:orange" align="center" /></br></br>
 <h3 style="text-align:center;font-family:sans-serif">Name : M.Veda Sree</h3>
 <h3 style="text-align:center;font-family:sans-serif">Branch : CSE1-A1</h3>
 
