--- a/TASK1.html
+++ b/TASK1.html
@@ -7,7 +7,7 @@
     <title>TASK1</title>
     <script src="Assign.js"></script>
 </head>
-<body>
+<body bgcolor="Orange">
     <h1>JS ASSIGNMENT</h1><hr><br>
     <h2>Details of 3 persons will be visible on console</h2>
 </body>
